extends Node2D

@onready var column_1 := [
	$"Slots/IconSlot",
	$"Slots/IconSlot2",
	$"Slots/IconSlot3"
]

@onready var column_2 := [
	$"Slots/IconSlot4",
	$"Slots/IconSlot5",
	$"Slots/IconSlot6"
]

@onready var column_3 := [
	$"Slots/IconSlot7",
	$"Slots/IconSlot8",
	$"Slots/IconSlot9"
]

@onready var column_4 := [
	$"Slots/IconSlot10",
	$"Slots/IconSlot11",
	$"Slots/IconSlot12"
]

@onready var column_5 := [
	$"Slots/IconSlot13",
	$"Slots/IconSlot14",
	$"Slots/IconSlot15"
]
